--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ elseif(TARGET_PLATFORM STREQUAL "rs90")
   include(CMake/rs90_defs.cmake)
 elseif(TARGET_PLATFORM STREQUAL "rg99")
   include(CMake/rg99_defs.cmake)
-elseif(TARGET_PLATFORM STREQUAL "funkey-s")
-  include(CMake/funkey-s_defs.cmake)
+elseif(TARGET_PLATFORM STREQUAL "anbernic-s")
+  include(CMake/anbernic-s_defs.cmake)
 endif()
 
 option(USE_SDL2 "Use SDL2 instead of SDL1" ON)
