--- a/opkg/default.anbernic-s.desktop
+++ b/opkg/default.anbernic-s.desktop
@@ -7,4 +7,4 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Categories=applications;
-X-OD-Manual=readme.funkey-s.txt
+X-OD-Manual=readme.anbernic-s.txt
